--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "ai-quiz-generator",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "echo 'Use Vercel CLI for local development: vercel dev'",
+    "build": "echo 'Vercel will build API routes automatically'",
+    "start": "echo 'No start script'"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "@google/genai": "^1.20.0",
-    "react-dom": "^19.1.1"
+    "@google/genai": "^1.20.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.14.9",
+    "@vercel/node": "^3.2.0",
+    "typescript": "^5.5.2"
   }
 }
